# llama.cpp-android-jni

./: .gitignore  README.md
docs/: API_IMPLEMENTATION_STATUS.md  JNI_ARCHITECTURE.md  MOBILE_API_ANALYSIS.md  README.md
jni-bindings/cpp/: CMakeLists.txt  jni_backend.cpp  jni_common.cpp  jni_common.h  jni_completion.cpp  jni_embedding.cpp  jni_grammar.cpp  jni_lifecycle.cpp  jni_logits.cpp  jni_lora.cpp  jni_memory.cpp  jni_model_info.cpp  jni_model_io.cpp  jni_rerank.cpp  jni_sampling.cpp  jni_session.cpp  jni_threading.cpp  jni_utils.cpp  jni_vocabulary.cpp
jni-bindings/kotlin/com/cortex/app/: BackendInfo.kt  LlamaEngine.kt  LogitsSampler.kt  MainActivity.kt  MemoryControl.kt  ModelInfo.kt  ModelMetadata.kt  SamplingParams.kt  ThreadConfig.kt  VocabularyInfo.kt
llama.cpp/common/: json-schema-to-grammar.cpp
llama.cpp/src/: llama-grammar.cpp  llama-grammar.h  llama-sampling.cpp
